<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.moviesappstageone.MoviesDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/five">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/five"
            app:cardCornerRadius="@dimen/ten">

            <ImageView
                android:id="@+id/backdrop_path_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher" />
        </android.support.v7.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/onedp"
            android:layout_margin="@dimen/ten"
            android:background="@color/gray_color" />
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/five">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/original_title"
                    android:textColor="@color/blue_color"
                    android:textSize="@dimen/twofivesp"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/onedp"
            android:layout_margin="@dimen/ten"
            android:background="@color/gray_color" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/five">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/onefivedp">

                    <ImageView
                        android:id="@+id/smallImage_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_launcher" />
                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_marginRight="@dimen/twofivedp">
                        <ImageView
                            android:id="@+id/fav_img_id"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/fav_button"
                            android:layout_gravity="end"
                            android:onClick="favMethod"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rating"
                            android:textColor="@color/purple_color"
                            android:textSize="@dimen/twofivesp" />

                        <TextView
                            android:id="@+id/rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/ten"
                            android:textColor="@color/pink_color"
                            android:textSize="@dimen/twozerosp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/onedp"
                        android:layout_margin="@dimen/ten"
                        android:background="@color/gray_color" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/twozerodp"
                            android:text="@string/release_date"
                            android:textColor="@color/purple_color"
                            android:textSize="@dimen/twozerosp" />

                        <TextView
                            android:id="@+id/releaseDate_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/five"
                            android:textColor="@color/pink_color"
                            android:textSize="@dimen/onefivesp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/twozerodp"
                            android:text="@string/vote_count"
                            android:textColor="@color/purple_color"
                            android:textSize="@dimen/twozerosp" />

                        <TextView
                            android:id="@+id/rating_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/five"
                            android:textColor="@color/pink_color"
                            android:textSize="@dimen/onefivesp" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/onedp"
            android:layout_margin="@dimen/ten"
            android:background="@color/gray_color" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/five">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@color/red_color"
                    android:textSize="@dimen/twofivesp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/onedp"
                    android:layout_margin="@dimen/ten"
                    android:background="@color/gray_color" />

                <TextView
                    android:id="@+id/overview_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue_color"
                    android:textSize="@dimen/twozerosp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/onedp"
            android:layout_margin="@dimen/ten"
            android:background="@color/gray_color" />
        <include layout="@layout/trailers"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/onedp"
            android:layout_margin="@dimen/ten"
            android:background="@color/gray_color" />
        <include layout="@layout/reviews"/>
    </LinearLayout>
</ScrollView>

